--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ main {
     padding-left: 20vw;
     padding-right: 20vw;
 
-    background-color: white;
+    background-color: rgb(255, 255, 255);
 }
 
 @media (max-width: 1200) {
@@ -54,7 +54,7 @@ main {
 
 
 p {
-    text-align: justify;
+   
 }
 
 a {
@@ -77,27 +77,25 @@ h1 {
 }
 
 h2 {
-    text-align: center;
     font-size: 2em;
+    text-align: center;
 }
 
 h3 {
     font-size: 1.5em;
-    text-align: center;
+    margin-bottom: -0.7em;
 }
 
 h4 {
     font-size: 1.2em;
-    text-align: center;
+    margin-bottom: -1.0em;
 }
 
-h5 {
-    padding: 0;
+h3,h4
+{
     margin: 0;
-    padding-bottom: 0.5em;
-    text-align: center;
-    font-weight: bold;
-    font-style: italic;
+    padding: 0;
+    padding-top: 1em;
 }
 
 nav {
