--- a/style.css
+++ b/style.css
@@ -14,8 +14,12 @@ main {
     padding-bottom: 5vh;
     padding-left: 25vw;
     padding-right: 25vw;
+    width: 50vw;
 
     background-color: rgb(255, 255, 255);
+}
+img{
+   max-width: 100%;
 }
 
 @media (max-width: 1200px) {
@@ -24,6 +28,7 @@ main {
         padding-bottom: 5vh;
         padding-left: 20vw;
         padding-right: 20vw;
+        width: 60vw;
     }
 }
 
@@ -33,6 +38,7 @@ main {
         padding-bottom: 5vh;
         padding-left: 15vw;
         padding-right: 15vw;
+        width: 70vw;
     }
 }
 @media (max-width: 768px) {
@@ -41,6 +47,7 @@ main {
         padding-bottom: 5vh;
         padding-left: 10vw;
         padding-right: 10vw;
+        width: 80vw;
     }
 }
 @media (max-width: 480px) {
@@ -49,6 +56,7 @@ main {
         padding-bottom: 5vh;
         padding-left: 10vw;
         padding-right: 10vw;
+        width: 80vw;
     }
 }
 
@@ -110,7 +118,7 @@ nav ul {
 hr {
     background-color: black;
     border-radius: 10px;
-    height: 0.1em;
+    height: 2px;
     border: 0;
 }
 
