--- a/style.css
+++ b/style.css
@@ -125,6 +125,8 @@ hr {
 }
 
 
+
+
 .video_bijlage video {
     width: 100%;
 }
@@ -139,4 +141,11 @@ hr {
     text-align: center;
     margin-top: 0.5em;
     margin-bottom: 0.5em;
+}
+
+dt{
+    font-weight: bold;
+}
+dl{
+    list-style-type:square;
 }
