--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 main {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Times;
     margin: 0 auto;
     padding-top: 5vh;
     padding-bottom: 5vh;
@@ -87,27 +87,41 @@ h1 {
     }
 }
 
+h2,
+h3,
+h4,
+h5 {
+    margin: 0;
+    padding: 0;
+    padding-top: 1em;
+    padding-bottom: 0.5em;
+    margin-top: -0.5em;
+}
+
 h2 {
     font-size: 2em;
     text-align: center;
+
+    /* margin-bottom:  -1.0em; */
+    /* padding-top: 1em; */
 }
+
 
 h3 {
     font-size: 1.5em;
-    margin-bottom: -0.7em;
+    /*  margin-bottom: -0.7em; */
 }
 
 h4 {
     font-size: 1.2em;
-    margin-bottom: -1.0em;
+    /* margin-bottom: -1.0em; */
 }
 
-h3,
-h4 {
-    margin: 0;
-    padding: 0;
-    padding-top: 1em;
+h5 {
+    font-size: 1em;
 }
+
+
 
 nav {
     line-height: 150%;
@@ -118,17 +132,23 @@ nav ul {
 }
 
 hr {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     border-radius: 10px;
-    height: 1.5px;
+    height: 1px;
     border: 0;
 }
 
 
 
-
 .video_bijlage video {
     width: 100%;
+    background-color: black;
+    aspect-ratio: 2.4;
+}
+
+.video_bijlage iframe {
+    width: 100%;
+    aspect-ratio: 2.4;
 }
 
 .audio_bijlage audio {
@@ -139,13 +159,6 @@ hr {
 .video_bijlage {
     font-style: italic;
     text-align: center;
-    margin-top: 0.5em;
+    margin-top: 1.5em;
     margin-bottom: 0.5em;
-}
-
-dt{
-    font-weight: bold;
-}
-dl{
-    list-style-type:square;
 }
