--- a/style.css
+++ b/style.css
@@ -65,7 +65,9 @@ img {
 
 
 
-p {}
+p {
+
+}
 
 a {
     text-decoration: none;
@@ -91,6 +93,8 @@ h2,
 h3,
 h4,
 h5 {
+    font-weight:bold;
+    text-align: left;
     margin: 0;
     padding: 0;
     padding-top: 1em;
