--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ main {
     margin: 0 auto;
     padding-top: 5vh;
     padding-bottom: 5vh;
-    margin-left: 25vw;
-    margin-right: 25vw;
+    padding-left: 25vw;
+    padding-right: 25vw;
     width: 50vw;
     font-family: 'Times New Roman', Times, serif;
 
@@ -170,7 +170,7 @@ img {
 {
     aspect-ratio: 2.4;
     border-radius: var(--border_radius);
-    background-color: rgb(222, 222, 222);
+    background-color: rgb(0, 0, 0);
 }
 
 .bijlage iframe {
