--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ img {
     border: 1px  rgb(219, 219, 219) solid;
     border-radius: var(--border_radius);
    
-    padding: 10px;
+    padding: 1em;
     margin-top: 1em;
     margin-bottom: 1em;
 }
@@ -170,7 +170,7 @@ img {
     background-color: rgb(0, 0, 0);
 }
 
-.bijlage iframe, .bijlage audio, .bijlage video {
+.bijlage iframe, .bijlage audio, .bijlage video, img {
     width: 100%;
     margin-bottom: 0.5em; 
 }
